--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,3 +71,25 @@ table:hover{
     float: right;
     margin: -5px -25px;
 }
+
+.container .ui.label, table.table thead th:nth-child(n+2){
+  background-color: #0d6efd;
+  color: #fff;
+}
+
+table.table {
+  font-size: 1.1rem;
+}
+
+table.table thead th:nth-child(n+2){
+  text-align: center;
+}
+
+table.table tr td:nth-child(n+2) {
+  font-weight: bold;
+  text-align: right;
+}
+
+table.table-striped>tbody>tr:nth-of-type(odd) {
+    --bs-table-accent-bg: #0d6efd14;
+}
