--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,24 +31,42 @@ code {
   );
 }
 
+.jumbotron {
+  position: relative;
+  overflow: hidden;
+}
+
+.jumbotron {
+  position: relative;
+  z-index: 2;
+  object-fit: cover;
+
+  padding: 2rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+}
+
+.card {
+  font-size: 20px;
+  color: white;
+}
+.card-text {
+  line-height: 3rem;
+}
+
 .royal {
   background: #141e30;
   background: -webkit-linear-gradient(to top, #243b55, #141e30);
   background: linear-gradient(to top, #243b55, #141e30);
+}
+
+.royal .card-header {
   color: #97b1ce;
 }
 
 .list-group-item {
   background-color: transparent;
   color: white;
-}
-
-.img-overlay {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(245, 246, 252, 0.52),
-    rgba(117, 19, 93, 0.73)
-  );
 }
 
 .navi,
