--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,6 @@ code {
   display: flex;
 }
 
-
 .navi,
 .jumboGrad {
   background-image: linear-gradient(
@@ -59,7 +58,6 @@ code {
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
-
   display: block;
 }
 
@@ -87,11 +85,11 @@ code {
   width: auto;
 }
 
-.mt-10 {
+.mt-10, .ui.button.mt-10  {
   margin-top: 10px;
 }
 
-.mb-10 {
+.mb-10{
   margin-bottom: 10px;
 }
 
