--- a/client/src/index.css
+++ b/client/src/index.css
@@ -313,3 +313,46 @@ ul.suggestions-list{
 .scores .nav.nav-pills .nav-link {
       color: #fff;
 }
+
+.ui.container:empty{
+  display: none;
+}
+
+.my-5 .card {
+    flex-basis: 30%;
+    margin: 0 0 20px 0 !important;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.my-5 .card-header{
+  display: flex;
+  align-items: center;
+}
+
+.my-5 .card-header svg {
+  min-width: 30px;
+  min-height: 30px;
+  flex-basis: 40%;
+  color: #43cea2;
+}
+
+.my-5 .card-header  .card-title{
+   font-size: 2rem;
+   line-height: 1;
+   margin: 0;
+   color: #185a9d;
+}
+
+.my-5 .card-body {
+  align-items: center;
+  display: flex;
+  color: #185a9d;
+}
+
+/* Media queries */
+@media screen and (max-width: 768px) {
+   .my-5 .card {
+     flex-basis: 100%;
+   }
+}
