--- a/client/src/index.css
+++ b/client/src/index.css
@@ -237,6 +237,21 @@ footer {
   border: solid rgba(255, 255, 255, 0.397) 2px;
 }
 
+.savedChart {
+  color: black !important;
+  font-size: 20px;
+  padding: 10px !important;
+  line-height: 2rem;
+}
+.nav-item .active {
+  background-color: rgb(0, 165, 143) !important;
+  color: White !important;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 5px 10px 5px !important;
+  transition: 0.1s ease-in;
+}
+
 /* .btn-search {
   background-image: linear-gradient(
     to right,
