--- a/client/src/index.css
+++ b/client/src/index.css
@@ -374,6 +374,15 @@ ul.suggestions-list{
   top: calc(100% + 10px);
 }
 
+.home-city {
+  text-shadow: 0px 0px 1px yellow;
+}
+
+.navbar-brand .ui.tiny.logo-image {
+  max-width: 30px;
+  margin-right: 10px;
+}
+
 /* Media queries */
 @media screen and (max-width: 768px) {
    .my-5 .card {
