--- a/client/src/index.css
+++ b/client/src/index.css
@@ -296,11 +296,11 @@ footer {
   overflow: auto;
   width: 100%;
   top: calc(100% + 5px);
-  max-height: calc(100vh - 400px);
+  max-height: calc(100vh - 500px);
 }
 
 .suggestion {
-  padding: 15px;
+  padding: 5px 15px;
   color: rgb(185, 184, 184);
   cursor: pointer;
 }
@@ -319,13 +319,6 @@ footer {
   padding: 10px !important;
   line-height: 2rem;
 }
-.nav-item .active {
-  background-color: rgb(0, 165, 143) !important;
-  color: White !important;
-  font-weight: bold;
-
-  transition: 0.1s ease-in;
-}
 
 .jumbotron .ui.card > .extra,
 .jumbotron .ui.card .meta {
@@ -342,11 +335,39 @@ footer {
   text-align: left;
 }
 
+.modal .nav-pills {
+  padding-left: 15px;
+  border-bottom: 1px solid #ccc;
+}
+
+.modal .nav-pills .nav-link {
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: normal;
+    border: 1px solid transparent;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    margin-bottom: -2px;
+}
+
+.modal .nav-item .active {
+    font-weight: normal;
+    background: #fff !important;
+    color: rgba(0,0,0,.95);
+    border-color: #ccc;
+    border-bottom: none;
+}
+
+.modal .nav-link {
+  transition: none;
+}
+
 .scores .nav.nav-pills {
   border-radius: 0.28571429rem;
   line-height: 1.2;
   background-color: #43cea2;
   margin: 1px 3px;
+  font-size: 1rem;
 }
 
 .scores .nav.nav-pills .nav-link {
@@ -418,6 +439,6 @@ footer {
   }
 
   .suggestions-list {
-    max-height: calc(100vh - 300px);
+    max-height: calc(100vh - 400px);
   }
 }
